# cerebras-meeting-agent

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CLOUDFLARE-LAUNCH.md  CURSOR-SDK-BRIEF.md  README.md  RISK-AUDIT.md  ZOOM-SETUP.md  implementation-notes.html  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
bot/: CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  SCREENSHARE_RESEARCH.md  STAGE_PAGE_RESEARCH.md  TRANSPORT_CONTRACTS_RESEARCH.md  TRANSPORT_SHIM_PLAN.md  TTS_AUDIO_SEND_RESEARCH.md  compose.yaml  sample.config.toml
bot/src/: Config.cpp  Config.h  Zoom.cpp  Zoom.h
bot/src/events/: MeetingShareCtrlEvent.cpp  MeetingShareCtrlEvent.h
bot/src/raw_record/: ZoomSDKAudioRawDataDelegate.cpp  ZoomSDKAudioRawDataDelegate.h
bot/src/raw_send/: ZoomSDKShareSource.cpp  ZoomSDKShareSource.h  ZoomSDKVirtualAudioMicEvent.cpp  ZoomSDKVirtualAudioMicEvent.h
bot/src/tools/: shmcap_test.cpp
bot/src/util/: TCPSocketServer.cpp  TCPSocketServer.h
docs/: e2e-report.html  e2e-summary.json  nothing-in-band.html  resource-map.html  verify-summary.md
scripts/: start-bot.sh
stt/: README.md  RUNBOOK.md  config.toml  demo_orchestrator.py  main.py  pyproject.toml
stt/preflight/: 01_build.sh  02_stt_file.sh  03_say_format.sh  04_tts_tcp.sh  05_share_render.sh  _common.sh  render_share_frame.py
stt/scripts/: simulate_meeting.py
stt/tests/: test_components.py  test_stt_roundtrip.py
stt/triage_bot/: __init__.py  buffer.py  config.py  orchestrator.py  sink.py  stt.py  tailer.py  tts.py
tests/: callAgentCursor.test.ts  cerebras.test.ts  codebase.test.ts  correct.test.ts  decide.test.ts  media-pcm.test.ts  media-smoke.test.ts  multi-tool.test.ts  orchestrator-correct.test.ts  orchestrator-sleep.test.ts  orchestrator.test.ts  resources.test.ts  screen-state.test.ts  time.test.ts  tools.test.ts  vad.test.ts  ws.test.ts  zoom-audio-in-bridge.test.ts  zoom-audio-out-uplink.test.ts
